--- a/mysql_upgrade2.yml
+++ b/mysql_upgrade2.yml
@@ -10,6 +10,7 @@
       state: stopped
 
   - name: Backup SQL directory
+    remote_user: root
     copy:
       src: /var/lib/mysql
       dest: /var/lib/mysql.bak
