--- a/mysql_upgrade.yml
+++ b/mysql_upgrade.yml
@@ -1,44 +1,40 @@
-- hosts: {{ target }}
+#- name: Update MariaDB
+- hosts: all
+  tasks:
+    - name: Backup All Databases to /home/temp/mysql
+      shell: mkdir /home/temp/mysql && cd /home/temp/mysql; echo "SHOW DATABASES;" | mysql -Bs| while read i ; do echo Dumping $i ; mysqldump --single-transaction $i |gzip -c > $i.sql.gz ; done
 
-  - name: Backup All Databases to /home/temp/mysql
-    shell: mkdir /home/temp/mysql && cd /home/temp/mysql; echo "SHOW DATABASES;" | 
-    mysql -Bs|
-    while read i ;
-    do echo Dumping $i ;
-    mysqldump --single-transaction $i |
-    gzip -c > $i.sql.gz ; done
-
-  - name: Backup SQL directory and Stop MariaDB
+    - name: Backup SQL directory and Stop MariaDB
       copy:
         src: /var/lib/mysql/
         dest: /var/lib/mysql.bak
         owner: mysql
         group: mysql
         mode: '0755'
-    service:
-      name: mariadb
+      service:
+        name: mariadb
       state: stopped
 
-  - name: Remove MariaDB
-    yum:
-      name: {{ packages }}
-    vars:
-      packages:
-      - mariadb
-      - mariadb-server
+    - name: Remove MariaDB
+      yum:
+        name: "{{ packages }}"
+      vars:
+        packages:
+        - mariadb
+        - mariadb-server
 
-  - name: install MariaDB repo 10.3
+    - name: install MariaDB repo 10.3
       shell: curl -LsS https://r.mariadb.com/downloads/mariadb_repo_setup | sudo bash -s -- --mariadb-server-version="mariadb-10.3"
 
-  - name: Install New Version of MariaDB
-    yum:
-      name: {{ packages }}
-    vars:
-      packages:
-      - mariadb
-      - mariadb-server
-      - mariadb-client
-      - mariadb-common
+    - name: Install New Version of MariaDB
+      yum:
+        name: "{{ packages }}"
+      vars:
+        packages:
+        - mariadb
+        - mariadb-server
+        - mariadb-client
+        - mariadb-common
   
     - name: Start MariaDB
       service:
@@ -47,5 +43,3 @@
 
     - name: Perform Mysql_upgrade
       shell: mysql_upgrade
-
-
