--- a/mysql_upgrade2.yml
+++ b/mysql_upgrade2.yml
@@ -17,8 +17,9 @@
       name: "{{ packages }}"
     vars:
       packages:
-      - mariadb
-      - mariadb-server
+      - MariaDB
+      - MariaDB-server
+      state: absent
 
   - name: Install MariaDB repo 10.3
     shell: curl -LsS https://r.mariadb.com/downloads/mariadb_repo_setup | sudo bash -s -- --mariadb-server-version="mariadb-10.3"
@@ -28,10 +29,10 @@
       name: "{{ packages }}"
     vars:
       packages:
-      - mariadb
-      - mariadb-server
-      - mariadb-client
-      - mariadb-common
+      - MariaDB
+      - MariaDB-server
+      - MariaDB-client
+      - MariaDB-common
 
   - name: Start MariaDB
     service: 
