--- a/mysql_upgrade2.yml
+++ b/mysql_upgrade2.yml
@@ -22,7 +22,7 @@
       state: absent
 
   - name: Install MariaDB repo 10.3
-    shell: curl -LsS https://r.mariadb.com/downloads/mariadb_repo_setup | sudo bash -s -- --mariadb-server-version="mariadb-10.3"
+    shell: "{{ mariadb_version }}"
 
   - name: Install MariaDB 10.3
     yum:
