--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -6,7 +6,7 @@
 - name: Install MySQL-python
   yum:
     name: MySQL-python
-    state: latestls -l rol
+    state: latest
 
 - name: Create Wordpress database
   mysql_db:
