--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -21,7 +21,7 @@
     state: present
 
 - name: Install Wordpress on site
-  shell: cd /home/{{ user }}/public_html/ ; wp core download ; wp core config --dbhost.db=localhost --dbname={{ wordpress_db }} --dbuser= {{ wordpress_user }} --dbpass={{ password }}
+  shell: cd /home/{{ user }}/public_html/ ; wp core download
 
 - name: Utilize wp-config.php template file
   template:
