--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -50,5 +50,8 @@
   - RewriteCond %{REQUEST_FILENAME} !-f
   - RewriteCond %{REQUEST_FILENAME} !-d
   - RewriteRule . /index.php [L]
+  - "/n"
+  - AddHandler {{ php-version }}-fcgi .php
+
 
 
