--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -51,7 +51,7 @@
   - RewriteCond %{REQUEST_FILENAME} !-d
   - RewriteRule . /index.php [L]
   - "/n"
-  - AddHandler {{ php_version }}-fcgi .php
+  - AddHandler {{ php-version }}-fcgi .php
 
 
 
