--- a/roles/httpd_config/tasks/main.yml
+++ b/roles/httpd_config/tasks/main.yml
@@ -61,51 +61,10 @@
     path: /etc/httpd/conf.d/php.conf
     state: touch
   
-- name:
-  lineinfile:
-    path: /etc/httpd/conf.d/php.conf
-    state: present
-    line: "{{ item }}"
-  with_items:
-  - ScriptAlias /cgi-bin/ "/var/www/cgi-bin/"
-  - AddHandler php56-fcgi .php
-  - Action php70-fcgi /cgi-bin/php70.fcgi
-  - Action php71-fcgi /cgi-bin/php71.fcgi
-  - Action php72-fcgi /cgi-bin/php72.fcgi
-  - Action php73-fcgi /cgi-bin/php73.fcgi
-  - Action php74-fcgi /cgi-bin/php74.fcgi
-  - Action php80-fcgi /cgi-bin/php80.fcgi
-  - "/n"
-  - <Directory /var/www/html/php70>
-  - DirectoryIndex index.php
-  - AllowOverride all
-  - Require all granted
-  - </Directory>
-  - <Directory /var/www/html/php71>
-  - DirectoryIndex index.php
-  - AllowOverride all
-  - Require all granted
-  - </Directory>
-  - <Directory /var/www/html/php72>
-  - DirectoryIndex index.php
-  - AllowOverride all
-  - Require all granted
-  - </Directory>
-  - <Directory /var/www/html/php73>
-  - DirectoryIndex index.php
-  - AllowOverride all
-  - Require all granted
-  - </Directory>
-  - <Directory /var/www/html/php74>
-  - DirectoryIndex index.php
-  - AllowOverride all
-  - Require all granted
-  - </Directory>
-  - <Directory /var/www/html/php80>
-  - DirectoryIndex index.php
-  - AllowOverride all
-  - Require all granted
-  - </Directory>
+- name: Copy template to Apache
+  template:
+    src: php.conf
+    dest: /etc/httpd/conf.d/php.conf
 
 - name: Restart Services
   service:
