--- a/roles/httpd_vhost/tasks/main.yml
+++ b/roles/httpd_vhost/tasks/main.yml
@@ -1,31 +1,31 @@
 - name: Create Docroot for site
-  shell: mkdir /home/"{{ user }}"/public_html/
+  shell: mkdir /home/{{ user }}/public_html/
 
 - name: Create file
   file:
-    path: /etc/httpd/conf.d/"{{ domain_name }}".conf
+    path: /etc/httpd/conf.d/{{ domain_name }}.conf
     state: touch
     mode: '0644'
 
 - name: Setup Vhost in Apache
   lineinfile:
-    path: /etc/httpd/conf.d/"{{ domain_name }}"
+    path: /etc/httpd/conf.d/{{ domain_name }}.conf
     state: present
     line: "{{ item }}"
   with_items:
   - <VirtualHost *:80>
-  - ServerName "{{ domain_name }}"
-  - ServerAlias www."{{ domain_name}}"
-  - ServerAdmin webmaster@"{{ domain_name }}"
-  - DocumentRoot /home/"{{ user }}"/public_html
+  - ServerName {{ domain_name }}
+  - ServerAlias www.{{ domain_name}}
+  - ServerAdmin webmaster@{{ domain_name }}
+  - DocumentRoot /home/{{ user }}/public_html
   - 
-  - <Directory /home/"{{ user }}"/public_html>
+  - <Directory /home/{{ user }}/public_html>
   - Options -Indexes +FollowSymLinks
   - AllowOverride All
   - </Directory>
   -
-  - ErrorLog /var/log/httpd/"{{ domain_name }}"-error.log
-  - CustomLog /var/log/httpd/"{{ domain_name }}"-access.log combined
+  - ErrorLog /var/log/httpd/{{ domain_name }}-error.log
+  - CustomLog /var/log/httpd/{{ domain_name }}-access.log combined
   - </VirtualHost>
 
 - name: Check syntax of httpd
