--- a/roles/firewall/tasks/main.yml
+++ b/roles/firewall/tasks/main.yml
@@ -1,11 +1,22 @@
 - name: Wget CSF
   shell: cd /home/temp/ ; wget https://download.configserver.com/csf.tgz
 
+- name: Create directory
+  file:
+    path: /home/temp/csf/
+    state: directory
+    mode: '0755'
+
 - name: Extract tgz file
-  shell: tar -xvf /home/temp/csf.tgz
+  shell: tar -xvf /home/temp/csf.tgz -C /home/temp/csf
   
 - name: Install CSF
   shell: sh /home/temp/csf/install.sh
+
+- name: Remove CSF directory
+  file:
+    path: /home/temp/csf
+    state: absent
 
 - name: Copy configuration template
   template:
