--- a/roles/ec2_instance/tasks/main.yml
+++ b/roles/ec2_instance/tasks/main.yml
@@ -11,3 +11,7 @@
     aws_region: us-east-2
     aws_access_key: "{{ access_key }}"
     aws_secret_key: "{{ secret_key }}"
+    volumes:
+    - device_name: /dev/xdva
+    volume_type: gp2
+    volume_size: "{{ disk }}"
