--- a/roles/ec2_instance/tasks/main.yml
+++ b/roles/ec2_instance/tasks/main.yml
@@ -4,7 +4,7 @@
     instance_type: t2.micro
     image: ami-092b43193629811af
     wait: yes
-    count: 1
+    count: " {{ instances }}"
     vpc_subnet_id: subnet-03922064f9e389337
     assign_public_ip: yes
     keypair: Shane
