--- a/roles/ec2_instance/tasks/main.yml
+++ b/roles/ec2_instance/tasks/main.yml
@@ -12,6 +12,6 @@
     aws_access_key: "{{ access_key }}"
     aws_secret_key: "{{ secret_key }}"
     volumes:
-      - device_name: /dev/xdva
+      - device_name: /dev/xvda
         volume_type: gp2
         volume_size: "{{ disk }}"
